# test_stm32h7

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.dm  README.md  dbg.sh  openocd.cfg  test_opts.py
Core/Inc/: FreeRTOSConfig.h  main.h
Core/Src/: main.c  main.cpp
cmake/: arm-gcc-toolchain.cmake
